# lab_04_cpp

./: CMakeLists.txt  main.cpp
include/: Array.h  Figure.h  Point.h
src/: FiguresArray.h  Octagon.h  Square.h  Triangle.h
tests/: test_figures.cpp
